# EmotiPet

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  app.cc  app.hpp  config.h  ota通信方案.md  partition.csv  sdkconfig.defaults
docs/: ota通信方案.md  机器人通信方案.md  设备执行流程.md  通信测试方案.md
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.cc
main/app/: app copy.cc  app copy.hpp  app.cc  app.hpp
main/app/assets/: assets.cc  assets.hpp
main/app/chatbot/: chatbot.cc  chatbot.hpp
main/app/chatbot/handle/: README.md  handle.cc  handle.hpp  receiver.cc  receiver.hpp  sender.cc  sender.hpp
main/app/chatbot/message/: message.cc  message.hpp
main/app/common/chatbot/handle/message/: message.cc  message.hpp
main/app/common/i2c/: i2c.cc  i2c.hpp
main/app/common/i2c/qmi8658a/: qmi8658a.cc  qmi8658a.hpp
main/app/config/: config.hpp
main/app/data/upload/: upload.hpp
main/app/device/APDS-9930/: apds9930.cc  apds9930.hpp
main/app/device/apds9930/: apds9930.cc  apds9930.hpp
main/app/device/led/: led.cc  led.hpp
main/app/device/m0404/: m0404.cc  m0404.hpp
main/app/device/mc1081s/: README.md  common.c  common.h  i2c_adapter.c  i2c_adapter.h  mc1081.c  mc1081.h  mc1081_reg.h
main/app/device/mpr121/: mpr121.cc  mpr121.hpp
main/app/device/pressure/: m0404.cc  m0404.hpp
main/app/device/qmi8658a/: qmi8658a.cc  qmi8658a.hpp
main/app/i2c/: i2c.cc  i2c.hpp
main/app/logic/: logic.cc  logic.h
main/app/media/audio/: audio.cc  audio.hpp
main/app/media/audio/capture/: capture.cc  capture.hpp
main/app/media/audio/process/afe/: afe.cc  afe.hpp
main/app/media/audio/process/opus/decode/: opus_dec.cc  opus_dec.hpp
main/app/media/audio/process/opus/encode/: opus_enc.cc  opus_enc.hpp
main/app/media/audio/wakeword/: wakeword.cc  wakeword.hpp
main/app/media/camera/: camera.cc  camera.hpp
main/app/media/camera/process/jpeg/encode/: jpeg_enc.cc  jpeg_enc.hpp
main/app/move/: move.cc  move.hpp
main/app/network/: network.cc  network.hpp
main/app/network/bluetooth/: bluetooth.cc  bluetooth.hpp
main/app/network/bluetooth/gatt/: gatt.cc  gatt.hpp
main/app/network/wifi/: wifi.cc  wifi.hpp
main/app/protocol/http/: http.cc  http.hpp
main/app/protocol/ntp/: ntp.cc  ntp.hpp
main/app/protocol/websocket/: websocket.cc  websocket.hpp
main/app/system/event/: event.cc  event.hpp
main/app/system/info/: info.cc  info.hpp
main/app/system/power/: power.cc  power.hpp
main/app/system/task/: task.cc  task.hpp
main/app/tool/jpeg/encode/: encoder.cc  encoder.hpp
main/app/tool/memory/: memory.cc  memory.hpp
main/app/tool/ota/: ota.cc  ota.hpp
main/app/tool/time/: time.cc  time.hpp
main/app/tool/uuid/: uuid.cc  uuid.hpp
main/test/: basic_main.cc  test_assets_main.cc  test_audio_capture_main.cc  test_audio_main.cc  test_ble_wifi_main.cc  test_camera_main.cc  test_encode_jpeg_main.cc  test_event_main.cc  test_http_camera_main.cc  test_http_main.cc  test_i2c_main.cc  test_led_main.cc  test_mc1081s_test.cc  test_mem_main.cc  test_move_main.cc  test_ntp_main.cc  test_opus_enc_dec_main.cc  test_ota_main.cc  test_power_main.cc  test_qmi8658a_main.cc  test_servo_easing_main.cc  test_task_main.cc  test_time_main.cc  test_uuid_main.cc  test_vad_main.cc  test_wakeword_main.cc  test_websocket_main.cc  test_wifi_main.cc
scripts/: README_ASSETS.md  build_assets.py  check_code.py  check_code.sh  format_code.py  format_code.sh  gen_crt.sh
tools/: ble_client_api.md  ble_wifi_require.txt
tools/ble_wifi/: ble_wifi.py
tools/ota_server/: ota_server.py
tools/ota_server/firmware/EmotiPet_v1.1.0/: README.txt  flasher_args.json  manifest.json
tools/ota_server/templates/: index.html
tools/package_bin/: README.md  package_bin.py
tools/test_server/: package-lock.json  package.json  server.js
tools/test_server/media/audio/: audio_1768806119805.opus  audio_1768806120621.opus  audio_1768806129532.opus  audio_1768806133141.opus  audio_1768806134329.opus  audio_1768806136373.opus  audio_1768806137402.opus  audio_1768806146720.opus  audio_1768806152148.opus  audio_1768806155115.opus  audio_1768806156670.opus  audio_1768806158198.opus  audio_1768806160385.opus  audio_1768806164025.opus  audio_1768806171090.opus  audio_1768806173344.opus  audio_1768806176723.opus  audio_1768806179792.opus  audio_1768806183479.opus  audio_1768806185724.opus  audio_1768806187156.opus  audio_1768806194939.opus  audio_1768806195923.opus  audio_1768806197305.opus  audio_1768806197917.opus  audio_1768806201929.opus  audio_1768806202858.opus  audio_1768806208293.opus  audio_1768806217477.opus  audio_1768806217988.opus  audio_1768806221472.opus  audio_1768806224746.opus  audio_1768806225791.opus  audio_1768806226077.opus  audio_1768806227784.opus  audio_1768806232777.opus  audio_1768806234887.opus  audio_1768806237649.opus  audio_1768806238792.opus  audio_1768806246773.opus  (+641 more)
tools/websocket_test_server/: README.md  package.json  websocket_server.js
