# Define source files
set(SOURCES "app/battery/battery.cc"
            "app/device/button/button.cc"
            "app/device/led/led.cc"
            "app/device/touch/touch.cc"
            "app/media/audio/audio.cc"
            # "app/media/camera/camera.cc"
            "app/network/bluetooth/bluetooth.cc"
            "app/network/bluetooth/gatt/gatt.cc"
            "app/network/network.cc"
            "app/network/wifi/wifi.cc"
            "app/protocol/http/http.cc"
            "app/protocol/ntp/ntp.cc"
            "app/protocol/websocket/websocket.cc"
            "app/system/event/event.cc"
            "app/system/info/info.cc"
            "app/system/power/power.cc"
            "app/system/task/task.cc"
            # "app/tool/file/file.cc"  
            "app/tool/memory/memory.cc"
            "app/tool/time/time.cc"
            "app/tool/uuid/uuid.cc"
            "app/app.cc"
            "main.cc"
            )

set(INCLUDE_DIRS "app"
                 "app/battery"
                 "app/device/button" 
                 "app/device/led"
                 "app/device/touch"
                 "app/media/audio"
                 "app/network"
                 "app/network/bluetooth"
                 "app/network/bluetooth/gatt"
                 "app/network/wifi"
                 "app/protocol/http"
                 "app/protocol/ntp"
                 "app/protocol/websocket"
                 "app/system/event"
                 "app/system/info"
                 "app/system/power"
                 "app/system/task"
                 # "app/tool/file"
                 "app/tool/memory"
                 "app/tool/time"
                 "app/tool/uuid"
                 )

idf_component_register(SRCS ${SOURCES}
                       INCLUDE_DIRS ${INCLUDE_DIRS}
                       )
